--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -33,8 +33,7 @@ jobs:
     # application-secret.yml 생성
     - name: make application-secret.yml
       run: |
-        cd ./src/main/resources
-        touch ./application-secret.yml
+        touch ./src/main/resources/application-secret.yml
         echo "${{ secrets.APPLICATION_SECRET }}" > ./application-secret.yml
       shell: bash
 
@@ -44,7 +43,7 @@ jobs:
 
     # Docker Image build
     - name : docker image build
-      run: docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/github-actions-demo .
+      run: docker build --platform linux/amd64 -t ${{ secrets.DOCKERHUB_USERNAME }}/github-actions-demo .
 
      # DockerHub login
     - name: docker login
