--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -34,7 +34,7 @@ jobs:
     - name: make application-secret.yml
       run: |
         touch ./src/main/resources/application-secret.yml
-        echo "${{ secrets.APPLICATION_SECRET }}" > ./application-secret.yml
+        echo "${{ secrets.APPLICATION_SECRET }}" > ./src/main/resources/application-secret.yml
       shell: bash
 
     # Spring boot Application build
