--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -14,7 +14,7 @@ on:
     branches: [ "main" ]
 
 jobs:
-  build:
+  build-docker-image: #ci
 
     runs-on: ubuntu-latest
     permissions:
@@ -45,13 +45,35 @@ jobs:
     - name : docker image build
       run: docker build --platform linux/amd64 -t ${{ secrets.DOCKERHUB_USERNAME }}/github-actions-demo .
 
-     # DockerHub login
+     # DockerHub 로그인
     - name: docker login
       uses: docker/login-action@v2
       with:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_PASSWORD }}
 
-    # DockerHub Image push
+    # DockerHub 이미지 push
     - name: dockerhub push
       run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/github-actions-demo
+
+  run-docker-image-on-ec2: #cd
+    needs: build-docker-image
+    runs-on: self-hosted
+
+    steps:
+    
+    # 최근 이미지 pull
+    - name: docker pull
+      run: sudo docker pull ${{ secrets.DOCKERHUB_USERNAME }}/github-actions-demo
+    
+    # 기존 container 중지
+    - name: docker stop container
+      run: sudo docker stop $(sudo docker ps -q) 2>/dev/null || true
+
+    # 3. 최신 이미지를 컨테이너화하여 실행
+    - name: docker run new container
+      run: sudo docker run --name github-actions-demo --rm -d -p 8080:8080 ${{ secrets.DOCKERHUB_USERNAME }}/github-actions-demo
+
+    # 4. 미사용 이미지 정리
+    - name: delete old docker image
+      run: sudo docker system prune -f
